<resources>
    <string name="app_name">安能饭否</string>
    <string name="page_title_home">首页</string>
    <string name="page_title_direct_messages">我的私信</string>
    <string name="page_title_favorites">{0}的收藏</string>
    <string name="page_title_mentions">提到我的</string>
    <string name="page_title_browse">随便看看</string>
    <string name="page_title_write">撰写信息</string>
    <string name="page_status_refreshing">正在获取...</string>
    <string name="page_status_updating">正在发送...</string>
    <string name="page_status_deleting">正在删除...</string>
    <string name="page_status_update_success">发送成功.</string>
    <string name="page_status_unable_to_update">无法发送信息...</string>
    <string name="page_status_timeout">网络超时.</string>
    <string name="page_status_same_page">您正在此页.</string>
    <string name="page_dm_texting_is_null">请输入私信内容.</string>
    <string name="page_text_is_null">内容不能为空.</string>
    <string name="page_dm_user_is_null">请输入收信人.</string>
    <string name="page_is_the_person_following_you">无法发送私信，通过客户端只能给互相关注的人发私信。</string>
    <string name="error_not_authorized">帐号验证失败，请重新登录.</string>
    <string name="error_server_down">服务器暂时无法响应.</string>
    <string name="page_label_get_more">获取更多</string>
    <string name="page_label_go_back">返回</string>
    <string name="omenu_signout">注销</string>
    <string name="omenu_refresh">刷新</string>
    <string name="omenu_preferences">选项</string>
    <string name="omenu_settings">设置</string>
    <string name="omenu_search">搜索</string>
    <string name="omenu_about">关于</string>
    <string name="omenu_exit">退出</string>
    <string name="cmenu_reply">回复</string>
    <string name="cmenu_retweet">转发</string>
    <string name="cmenu_direct_message">私信</string>
    <string name="cmenu_add_fav">收藏</string>
    <string name="cmenu_del_fav">取消收藏</string>
    <string name="cmenu_delete">删除</string>
    <string name="cmenu_share">分享</string>
    <string name="cmenu_clipboard">复制到剪贴板</string>
    <string name="cmenu_more">更多</string>
    <string name="cmenu_user_profile_prefix">的空间</string>
    <string name="cmenu_user_status">的消息</string>
    <string name="cmenu_user_addfriend_prefix">设置对</string>
    <string name="cmenu_user_friend_suffix">的关注</string>
    <string name="cmenu_user_delfriend_prefix">取消对</string>
    <string name="cmenu_user_send_prefix">给</string>
    <string name="cmenu_user_senddm_suffix">发私信</string>
    <string name="cmenu_user_sendmention_suffix">留言</string>
    <string name="login_label_username">Email或手机号:</string>
    <string name="login_label_password">饭否密码:</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_status_null_username_or_password">帐号和密码不能为空。</string>
    <string name="login_status_invalid_username_or_password">帐号或密码错误，请重新输入。</string>
    <string name="login_status_network_or_connection_error">网络错误，请稍后再试。</string>
    <string name="login_register_link">没有帐号？ <a href="http://fanfou.com/register">注册</a></string>
    <string name="login_status_failure">登录失败。</string>
    <string name="user_label_follow">关注此人</string>
    <string name="user_label_unfollow">取消关注</string>
    <string name="user_status_following">正在关注...</string>
    <string name="user_status_unfollowing">正在取消关注...</string>
    <string name="user_prompt_this_person_has_protected_their_updates">该用户只向关注他/她的人公开消息。</string>
    <string name="user_query_status_success">查询成功！</string>
    <string name="write_label_send">发送</string>
    <string name="write_label_send_hint">有什么要说的？</string>
    <string name="write_label_choose_images">插入图片</string>
    <string name="write_label_send_in_background">后台发送</string>
    <string name="write_label_take_a_picture">相机拍摄</string>
    <string name="write_label_choose_a_picture">手机相册</string>
    <string name="write_label_insert_picture">插入图片</string>
    <string name="write_label_you_can_type_prefix">可以输入</string>
    <string name="write_label_you_can_type_suffix">字</string>
    <string name="status_status_reply_cannot_display">该消息可能已被删除，或你没有通过 {0} 的验证，所以无法查看该回复消息。</string>
    <string name="direct_meesage_status_texting_is_null">请输入私信内容.</string>
    <string name="direct_meesage_status_user_is_null">请输入收信人.</string>
    <string name="direct_meesage_status_the_person_not_following_you">无法发送私信，通过客户端只能给互相关注的人发私信。</string>
    <string name="direct_message_label_from_prefix">来自: </string>
    <string name="direct_message_label_to_prefix">发给: </string>
    <string name="profile_user_location_title">所在地:</string>
    <string name="profile_user_url_title">网站:</string>
    <string name="profile_friends_count_title">{0}关注的人</string>
    <string name="profile_followers_count_title">关注{0}的人</string>
    <string name="profile_statuses_count_title">消息</string>
    <string name="profile_favourites_count_title">收藏</string>
    <string name="profile_description_null">用户未设置自述</string>
    <string name="profile_location_null">用户未设置地点</string>
    <string name="profile_isyou">这是你本人</string>
    <string name="profile_isfollowing">您已关注该用户</string>
    <string name="profile_notfollowing">您尚未关注该用户</string>
    <string name="profile_following_error">添加用户失败</string>
    <string name="profile_send_mention">给ta留言</string>
    <string name="profile_send_dm">发私信</string>
    <string name="pref_title_notifications">后台提示</string>
    <string name="pref_title_apperance">外观</string>
    <string name="pref_title_misc">其他</string>
    <string name="pref_check_updates_title">设置后台提醒</string>
    <string name="pref_check_updates_summary">选中可以在后台提醒新发言、提到我的和私信</string>
    <string name="pref_check_updates_timeline_only_title">消息</string>
    <string name="pref_check_updates_timeline_only_summary">提示好友消息</string>
    <string name="pref_check_updates_replies_only_title">回复</string>
    <string name="pref_check_updates_replies_only_summary">提示提到我的回复</string>
    <string name="pref_check_updates_direct_message_only_title">私信</string>
    <string name="pref_check_updates_direct_message_only_summary">提示私信</string>
    <string name="pref_check_updates_interval_title">检查频率</string>
    <string name="pref_check_updates_interval_summary">两次检查的间隔分钟数</string>
    <string name="pref_check_updates_interval_dialog_title">间隔分钟数:</string>
    <string name="pref_check_updates_interval_default">10</string>
    <string name="pref_check_updates_vibrate_title">振动</string>
    <string name="pref_check_updates_vibrate_summary">有新消息提示时手机振动</string>
    <string name="pref_check_updates_ringtone_title">选择提示铃音</string>
    <string name="pref_check_updates_ringtone_summary"/>
    <string name="pref_use_profile_image">用户头像</string>
    <string name="pref_use_profile_image_summary">是否显示用户头像</string>
    <string name="pref_highlight_background">高亮背景</string>
    <string name="pref_highlight_background_summary">是否对自己发出的和提到自己的消息使用高亮背景</string>
    <string name="pref_photo_preview">图片预览</string>
    <string name="pref_photo_preview_summary">指定预览图片的大小</string>
    <string name="pref_force_show_all_image">强制预览所有图片</string>
    <string name="pref_force_show_all_image_summary">即使不是饭否认为包含图片的消息也使用预览</string>
    <string name="pref_photo_preview_type_none">不显示</string>
    <string name="pref_photo_preview_type_thumbnail">缩略图尺寸</string>
    <string name="pref_photo_preview_type_middle">小尺寸</string>
    <string name="pref_photo_preview_type_original">大尺寸</string>
    <string name="pref_ui_font_size_title">字体大小</string>
    <string name="pref_ui_font_size_summary">消息列表中的字体大小, 重启页面后生效.</string>
    <string name="pref_rt_prefix_title">转发前缀</string>
    <string name="pref_rt_prefix_summary">转发消息时的前缀</string>
    <string name="pref_rt_prefix_default">转</string>
    <string name="pref_rt_cursor_position_title">转发时光标在前</string>
    <string name="pref_rt_cursor_position_summary">选中的话转发时光标在转发消息的开头，不选中的话光标在末尾</string>
    <string name="pref_title_network">网络</string>
    <string name="pref_network_type_title">网络类型</string>
    <string name="pref_network_type_cmnet">cmnet</string>
    <string name="pref_network_type_cmwap">cmwap</string>
    <string name="pref_network_type_3g">3G/wifi</string>
    <string name="pref_network_type_summary">选择当前网络的接入点或类型</string>
    <string name="pref_title_action">行为</string>
    <string name="pref_use_enter_send_title">回车发送</string>
    <string name="pref_use_enter_send_summary">使用键盘回车键发送消息</string>
    <string name="pref_use_gestrue_title">手势识别</string>
    <string name="pref_use_gestrue_summary">使用手势左右滑动切换页面</string>
    <string name="pref_force_screen_orientation_portrait">禁止横屏</string>
    <string name="pref_force_screen_orientation_portrait_summary">强制屏幕竖向显示</string>
    <string name="pref_use_shake_title">晃动刷新</string>
    <string name="pref_use_shake_summary">晃动手机获得最新消息</string>
    <string name="pref_title_labs">实验室</string>
    <string name="service_new_twitter_updates">新消息</string>
    <string name="service_x_new_tweets">{0} 条新消息</string>
    <string name="service_new_mention_updates">新提到我的消息</string>
    <string name="service_x_new_mentions">{0} 条新提到我的消息</string>
    <string name="service_new_direct_message_updates">新私信</string>
    <string name="service_x_new_direct_messages">{0} 条新私信</string>
    <string name="tweet_source_prefix">来自</string>
    <string name="tweet_reply_to_prefix">给</string>
    <string name="tweet_reply_to_suffix">的回复</string>
    <string name="tweet_created_at_beautify_prefix"></string>
    <string name="tweet_created_at_beautify_sec">秒</string>
    <string name="tweet_created_at_beautify_min">分钟</string>
    <string name="tweet_created_at_beautify_hour">小时</string>
    <string name="tweet_created_at_beautify_day">天</string>
    <string name="tweet_created_at_beautify_suffix">前</string>
    <string name="about_introduce_title">\n项目介绍\n</string>
    <string name="about_introduce">安能饭否是一个开源的饭否客户端，修改自开源项目twitta，采用Apache License 2.0协议发布。</string>
    <string name="about_links_title">\n相关链接\n</string>
    <string name="about_links">饭否主页: http://fanfou.com
\n\n安能饭否项目主页: http://code.google.com/p/fanfoudroid
\n\ntwitta项目主页: http://code.google.com/p/twitta
\n\nApache License 2.0: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_developers_title">\n开发者\n</string>
    <string name="about_developers">令狐虫: ch.linghu@gmail.com
\n\n三日坊主：lds2012@gmail.com
\n\ndodo la: dinophp@gmail.com
\n\nPhoenix: phoenix.nir@gmail.com
\n\n忽然兔: zhoumeng1987@gmail.com</string>
    <string name="about_thanks_title">\n感谢\n</string>
    <string name="about_thanks">感谢所有对这个项目提供了切实帮助的人们。</string>
    <string name="about_label_ok">了解</string>
    <string name="about_label_feedback">反馈</string>
    <string name="search_label">安能饭否</string>
    <string name="search_hint">搜索饭否</string>
    <string name="search_box_null">您未提供任何搜索信息！\n请输入关键词或点击话题！</string>
    <string name="trends_title">热门话题</string>
    <string name="saved_search_title">关注的话题</string>
    <string name="search_loading">正在查询...</string>
    <string name="general_lable_ok">确定</string>
    <string name="general_lable_cancel">取消</string>
    <string name="general_del_friend">取消关注</string>
    <string name="general_add_friend">添加关注</string>
    <string name="general_add_friend_short">关注</string>
    <string name="pages_mine">我的消息</string>
    <string name="pages_profile">个人资料</string>
    <string name="pages_followers">关注我的</string>
    <string name="pages_following">我关注的</string>
    <string name="pages_home">首页</string>
    <string name="pages_mentions">提到我的</string>
    <string name="pages_browse">随便看看</string>
    <string name="pages_search">收藏</string>
    <string name="pages_message">我的私信</string>
    <string name="widget_no_message">暂无消息</string>
    <string name="widget_input_prompt">说点什么呗</string>
    <string name="widget_label">安能饭否（大）</string>
    <string name="widget_small_label">安能饭否（小）</string>
    <string name="crash_notif_ticker_text">安能饭否发生错误，请协助提交错误报告</string>
    <string name="crash_notif_title">安能饭否出错了</string>
    <string name="crash_notif_text">我们需要你的帮助，请点击</string>
</resources>