<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- 后台提醒 -->
  <PreferenceCategory android:title="@string/pref_title_notifications">
   <CheckBoxPreference  
            android:key="check_updates"  
            android:defaultValue="true"
            android:title="@string/pref_check_updates_title"
            android:summary="@string/pref_check_updates_summary"
            />  

   <CheckBoxPreference  
            android:key="timeline_only"
            android:dependency="check_updates"  
            android:defaultValue="false"
            android:title="@string/pref_check_updates_timeline_only_title"
            android:summary="@string/pref_check_updates_timeline_only_summary"
            />  

   <CheckBoxPreference  
            android:key="replies_only"
            android:dependency="check_updates"  
            android:defaultValue="true"
            android:title="@string/pref_check_updates_replies_only_title"
            android:summary="@string/pref_check_updates_replies_only_summary"
            />  
   <CheckBoxPreference  
            android:key="dm_only"
            android:dependency="check_updates"  
            android:defaultValue="true"
            android:title="@string/pref_check_updates_direct_message_only_title"
            android:summary="@string/pref_check_updates_direct_message_only_summary"
            />  
 
   <ListPreference  
            android:key="check_update_interval"
            android:dependency="check_updates"  
            android:defaultValue="@string/pref_check_updates_interval_default"
            android:title="@string/pref_check_updates_interval_title"  
            android:summary="@string/pref_check_updates_interval_summary"
            android:entries="@array/check_intervals"
            android:entryValues="@array/check_intervals"
            android:dialogTitle="@string/pref_check_updates_interval_dialog_title"                        
            />

  <RingtonePreference
    android:dependency="check_updates"
    android:key="ringtone"
    android:title="@string/pref_check_updates_ringtone_title"
    android:summary="@string/pref_check_updates_ringtone_summary"
    android:ringtoneType="notification"
    android:defaultValue="content://settings/system/notification_sound" />
	          
   <CheckBoxPreference  
            android:key="vibrate"
            android:dependency="check_updates"  
            android:defaultValue="true"
            android:title="@string/pref_check_updates_vibrate_title"
            android:summary="@string/pref_check_updates_vibrate_summary"
            />  
  </PreferenceCategory>

  <!-- 外观 -->
  <PreferenceCategory android:title="@string/pref_title_apperance">
	    <CheckBoxPreference
	    android:key="use_profile_image"
	    android:title="@string/pref_use_profile_image"
	    android:summary="@string/pref_use_profile_image_summary"
	    android:defaultValue="true" />
	    <ListPreference
	    android:key="photo_preview"
	    android:title="@string/pref_photo_preview"
	    android:summary="@string/pref_photo_preview_summary"
	    android:defaultValue="@string/pref_photo_preview_type_original" 
	    android:entries="@array/photo_preview_type"
	    android:entryValues="@array/photo_preview_type"
	    android:dialogTitle="@string/pref_photo_preview"                        
	    />
	    <CheckBoxPreference
	    android:key="force_show_all_image"
	    android:title="@string/pref_force_show_all_image"
	    android:summary="@string/pref_force_show_all_image_summary"
	    android:defaultValue="false" />
	    
	    <ListPreference  
            android:key="ui_font_size"
            android:defaultValue="16"
            android:title="@string/pref_ui_font_size_title"  
            android:summary="@string/pref_ui_font_size_summary"
            android:entries="@array/ui_font_size"
            android:entryValues="@array/ui_font_size"
            android:dialogTitle="@string/pref_ui_font_size_title"                        
            />
  </PreferenceCategory>

  <!-- 网络 -->
  <PreferenceCategory android:title="@string/pref_title_network">
     <ListPreference  
       android:key="network_type"
       android:defaultValue="@string/pref_network_type_cmnet"
       android:title="@string/pref_network_type_title"  
       android:summary="@string/pref_network_type_summary"
       android:entries="@array/network_type"
       android:entryValues="@array/network_type"
       android:dialogTitle="@string/pref_network_type_title"                        
       />
  </PreferenceCategory>

  <!-- 其他 -->
  <PreferenceCategory android:title="@string/pref_title_misc">
    <EditTextPreference
    android:key="rt_prefix"
    android:title="@string/pref_rt_prefix_title"
    android:summary="@string/pref_rt_prefix_summary"
    android:defaultValue="@string/pref_rt_prefix_default" />
   <CheckBoxPreference
    android:key="rt_insert_append"
    android:title="@string/pref_rt_cursor_position_title"
    android:summary="@string/pref_rt_cursor_position_summary"
    android:defaultValue="true" />
  </PreferenceCategory>
  


</PreferenceScreen>