<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e7e7e7"
    >
   
   <!-- Header -->
   
   <!-- 状态栏 -->
   <RelativeLayout android:gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >
        
        <!-- 提示框 -->
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
         />                   
         <!-- 字数统计 -->
         <TextView
            android:id="@+id/chars_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:text="@string/write_label_you_can_type_suffix"
            style="@style/normalText.span"
            /> 
        <TextView
            android:id="@+id/chars_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/chars_word"
            android:textSize="13dp"
            android:textColor="#FF000000"
            android:layout_marginRight="3dp"
            android:text="140"
            />
        <TextView
            android:id="@+id/char_you_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/chars_text"
            android:text="@string/write_label_you_can_type_prefix"
            style="@style/normalText.span"
            /> 
        
    </RelativeLayout>
        
    <!-- main text input -->
    <EditText android:id="@+id/tweet_edit"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1"
          android:textSize="15dp"
          android:imeOptions="actionSend|flagNoEnterAction"    
          android:gravity="top"
          />   
           
   <!-- 底部工具栏 -->
   <LinearLayout android:orientation="horizontal" 
         android:gravity="center_vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/send_message_block"
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
          >
        <TextView
         android:id="@+id/char_you_can"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@id/chars_text"
         android:text="收信人"
         android:textColor="@color/status_text"
         
         /> 
       <AutoCompleteTextView
           android:id="@+id/to_edit"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_marginRight="5dp"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="1dp"
           android:singleLine="true"
           android:dropDownSelector="@drawable/list_selector"
           android:inputType="text"        
           />           
       <!-- 发送按钮 -->
	   <Button android:id="@+id/send_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/write_label_send"
	    />
    </LinearLayout>
    
</LinearLayout>
